rust_writer_procedural/tests/ui/impl_mutator_fails_if_not_field_called_mutated_in_implementor.stderr
error: Expected a file named mutated being [bool;N] inside struct.
 --> tests/ui/impl_mutator_fails_if_not_field_called_mutated_in_implementor.rs:6:8
  |
6 | struct SomeStruct;
  |        ^^^^^^^^^^
