rust_writer_procedural/tests/ui/impl_mutator_fails_if_not_field_called_mutated_in_implementor.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::impl_mutator;

#[impl_mutator]
struct SomeStruct;

fn main() {}
